# ChangeLog of Nadoka($Rev$)
# $Id$ 

Wed Mar 19 19:46:52 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ndk/logger.rb : pass ch to msgobj from clog.

	* ndk/config.rb : unify safe channel log filename.

Mon Jul 23 01:07:08 2007  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* lib/rss_check.rb : bug fix when dc_date is nil.

	* ndk/config.rb : fix bug when non-Hash in BotConfig array.


Mon Jul 02 19:01:04 2007  Koichi Sasada  <ko1@atdot.net>

	* plugins/tenkibot.nb : fix output format detail.

	* plugins/googlebot.nb : fix to retry 5 times if error is
          occurred while google search.

	* plugins/dictbot.nb : fix to show short summary.


2007-07-02(Mon) 18:01:58 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* rice/irc.rb : allow trailing "." in HOSTNAME (for NickServ
	on Freenode)


2007-02-20(Tue) 23:35:41 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* **/*.rb, plugins/*.nb : fix typos


2006-10-28(Sat) 22:08:11 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/server_state.rb : fix bug on_mode after server split


2006-10-20(Fri) 22:22:07 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : new method ccn2rcn


2006-10-07(Sat) 03:52:11 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugin/tenkibot.nb : added


2006-10-02(Mon) 21:58:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.7.0 : released

	* ndk/version.rb : 0.7.1


2006-10-02(Mon) 21:41:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weatherbot.nb : removed

	* plugins/sendpingbot.nb : added

	* ndk/client.rb : modified for pingbot

	* ndk/server.rb : ditto


2006-09-01(Fri) 02:04:15 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : support send to a safe channel

	* nadokarc : fix misalignment


2006-08-31(Thu) 01:40:39 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : fix typos


2006-08-11(Fri) 14:45:01 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/gonzuibot.nb : add a comma

	* plugins/pastebot.nb : add nick to paste page name
